local/logs/project.log
2019-10-06T16:10:06.130Z - normal: Load ~/.CocosCreator/settings.json
2019-10-06T16:10:06.133Z - normal: checking language setting...
2019-10-06T16:10:06.133Z - normal: Language: en
2019-10-06T16:10:06.595Z - success: protocol editor-framework registered
2019-10-06T16:10:06.595Z - success: protocol app registered
2019-10-06T16:10:06.595Z - success: protocol theme registered
2019-10-06T16:10:06.595Z - success: protocol packages registered
2019-10-06T16:10:06.596Z - success: protocol unpack registerred
2019-10-06T16:10:06.596Z - success: protocol disable-commonjs registerred
2019-10-06T16:10:07.639Z - normal: connected!
2019-10-06T16:10:07.640Z - normal: Check project /Users/minhhien/hien/Work/Unity/QuickMath3
2019-10-06T16:10:07.641Z - normal: Initializing project /Users/minhhien/hien/Work/Unity/QuickMath3
2019-10-06T16:10:07.645Z - normal: Initializing Cocos2d
2019-10-06T16:10:07.923Z - normal: Initializing Asset Database
2019-10-06T16:10:07.972Z - success: protocol uuid registerred
2019-10-06T16:10:07.973Z - success: protocol db registerred
2019-10-06T16:10:07.973Z - success: protocol thumbnail registerred
2019-10-06T16:10:07.973Z - normal: Loading editor/builtin packages
2019-10-06T16:10:08.092Z - success: assets loaded
2019-10-06T16:10:08.096Z - success: builder loaded
2019-10-06T16:10:08.098Z - success: cocos-analytics loaded
2019-10-06T16:10:08.109Z - success: console loaded
2019-10-06T16:10:08.148Z - success: fb-instant-games loaded
2019-10-06T16:10:08.152Z - success: hierarchy loaded
2019-10-06T16:10:08.165Z - success: inspector loaded
2019-10-06T16:10:08.167Z - success: keystore loaded
2019-10-06T16:10:08.172Z - success: node-library loaded
2019-10-06T16:10:08.174Z - success: package-asset loaded
2019-10-06T16:10:08.176Z - success: preferences loaded
2019-10-06T16:10:08.179Z - success: project-exporter loaded
2019-10-06T16:10:08.199Z - success: project-importer loaded
2019-10-06T16:10:08.202Z - success: project-settings loaded
2019-10-06T16:10:08.210Z - success: ui-kit loaded
2019-10-06T16:10:08.220Z - success: scene loaded
2019-10-06T16:10:08.222Z - success: sprite-editor loaded
2019-10-06T16:10:08.228Z - success: store loaded
2019-10-06T16:10:08.240Z - success: timeline loaded
2019-10-06T16:10:08.241Z - normal: Loading builtin packages
2019-10-06T16:10:08.252Z - success: asset-db-debugger loaded
2019-10-06T16:10:08.253Z - success: color-picker loaded
2019-10-06T16:10:08.254Z - success: jsb-adapter loaded
2019-10-06T16:10:08.258Z - success: package-manager loaded
2019-10-06T16:10:08.259Z - success: qqplay-adapter loaded
2019-10-06T16:10:08.265Z - success: sdkbox loaded
2019-10-06T16:10:08.271Z - success: tester loaded
2019-10-06T16:10:08.278Z - success: ui-grid loaded
2019-10-06T16:10:08.282Z - success: ui-kit-preview-extra loaded
2019-10-06T16:10:08.287Z - success: ui-kit-preview loaded
2019-10-06T16:10:08.290Z - success: ui-tree loaded
2019-10-06T16:10:08.291Z - success: weapp-adapter loaded
2019-10-06T16:10:09.194Z - normal: Loading packages
2019-10-06T16:10:09.198Z - normal: Watching packages
2019-10-06T16:10:09.251Z - normal: Run Application
2019-10-06T16:10:10.872Z - success: preview server running at http://localhost:7456
2019-10-06T16:12:09.959Z - normal: ScaleX != ScaleY. Don't know which one to return
2019-10-06T16:12:09.960Z - normal: ScaleX != ScaleY. Don't know which one to return
2019-10-06T16:12:09.961Z - normal: ScaleX != ScaleY. Don't know which one to return
2019-10-06T16:14:47.385Z - normal: ScaleX != ScaleY. Don't know which one to return
2019-10-06T16:14:47.387Z - normal: ScaleX != ScaleY. Don't know which one to return
2019-10-06T16:14:47.392Z - normal: ScaleX != ScaleY. Don't know which one to return
2019-10-06T16:17:27.161Z - normal: ScaleX != ScaleY. Don't know which one to return
2019-10-06T16:17:27.163Z - normal: ScaleX != ScaleY. Don't know which one to return
2019-10-06T16:17:27.163Z - normal: ScaleX != ScaleY. Don't know which one to return
2019-10-06T16:19:02.751Z - normal: ScaleX != ScaleY. Don't know which one to return
2019-10-06T16:19:02.753Z - normal: ScaleX != ScaleY. Don't know which one to return
2019-10-06T16:19:02.758Z - normal: ScaleX != ScaleY. Don't know which one to return
2019-10-06T16:20:54.231Z - normal: ScaleX != ScaleY. Don't know which one to return
2019-10-06T16:20:54.234Z - normal: ScaleX != ScaleY. Don't know which one to return
2019-10-06T16:20:54.234Z - normal: ScaleX != ScaleY. Don't know which one to return
2019-10-06T16:37:04.157Z - normal: ScaleX != ScaleY. Don't know which one to return
2019-10-06T16:37:04.159Z - normal: ScaleX != ScaleY. Don't know which one to return
2019-10-06T16:37:04.159Z - normal: ScaleX != ScaleY. Don't know which one to return
2019-10-06T16:43:21.257Z - normal: ScaleX != ScaleY. Don't know which one to return
2019-10-06T16:43:21.305Z - normal: ScaleX != ScaleY. Don't know which one to return
2019-10-06T16:43:21.307Z - normal: ScaleX != ScaleY. Don't know which one to return
2019-10-06T16:43:47.289Z - normal: ScaleX != ScaleY. Don't know which one to return
2019-10-06T16:43:47.291Z - normal: ScaleX != ScaleY. Don't know which one to return
2019-10-06T16:43:47.292Z - normal: ScaleX != ScaleY. Don't know which one to return
2019-10-06T16:48:06.600Z - normal: ScaleX != ScaleY. Don't know which one to return
2019-10-06T16:48:06.606Z - normal: ScaleX != ScaleY. Don't know which one to return
2019-10-06T16:48:06.608Z - normal: ScaleX != ScaleY. Don't know which one to return
2019-10-06T16:48:24.007Z - normal: ScaleX != ScaleY. Don't know which one to return
2019-10-06T16:48:24.056Z - normal: ScaleX != ScaleY. Don't know which one to return
2019-10-06T16:48:24.059Z - normal: ScaleX != ScaleY. Don't know which one to return
2019-10-06T16:55:34.939Z - normal: ScaleX != ScaleY. Don't know which one to return
2019-10-06T16:55:39.218Z - normal: ScaleX != ScaleY. Don't know which one to return
2019-10-06T16:57:26.154Z - normal: ScaleX != ScaleY. Don't know which one to return
2019-10-06T16:57:26.174Z - normal: ScaleX != ScaleY. Don't know which one to return
2019-10-06T16:57:26.177Z - normal: ScaleX != ScaleY. Don't know which one to return
2019-10-06T17:08:06.048Z - warn: [db-task][sync-changes] Backup unused meta file: db://assets/Sprite/gameOver.jpg.meta
2019-10-06T17:48:49.801Z - normal: ScaleX != ScaleY. Don't know which one to return
2019-10-06T17:48:49.804Z - normal: ScaleX != ScaleY. Don't know which one to return
2019-10-06T17:48:49.805Z - normal: ScaleX != ScaleY. Don't know which one to return
2019-10-06T17:57:48.275Z - normal: ScaleX != ScaleY. Don't know which one to return
2019-10-06T17:57:48.278Z - normal: ScaleX != ScaleY. Don't know which one to return
2019-10-06T17:57:48.280Z - normal: ScaleX != ScaleY. Don't know which one to return
2019-10-06T17:58:16.640Z - normal: ScaleX != ScaleY. Don't know which one to return
2019-10-06T17:58:16.646Z - normal: ScaleX != ScaleY. Don't know which one to return
2019-10-06T17:58:16.646Z - normal: ScaleX != ScaleY. Don't know which one to return
2019-10-06T17:59:48.122Z - normal: ScaleX != ScaleY. Don't know which one to return
2019-10-06T17:59:48.123Z - normal: ScaleX != ScaleY. Don't know which one to return
2019-10-06T17:59:48.127Z - normal: ScaleX != ScaleY. Don't know which one to return
2019-10-06T18:04:21.759Z - failed: [db-task][sync-changes] Failed to import asset /Users/minhhien/hien/Work/Unity/QuickMath3/assets/Scripts/LoseView.js, message: Compile error: SyntaxError: /Users/minhhien/hien/Work/Unity/QuickMath3/assets/Scripts/LoseView.js: Unexpected token (8:13)
   6 |     properties: {
   7 |      btn_restart:cc.Button,
>  8 |      GameView= require("GameView"),
     |              ^
   9 |     },
  10 | 
  11 |     // LIFE-CYCLE CALLBACKS:
    at Parser.pp$5.raise (/Applications/CocosCreator.app/Contents/Resources/app.asar/node_modules/babylon/lib/index.js:4454:13)
    at Parser.pp.unexpected (/Applications/CocosCreator.app/Contents/Resources/app.asar/node_modules/babylon/lib/index.js:1761:8)
    at Parser.pp$3.parseMaybeAssign (/Applications/CocosCreator.app/Contents/Resources/app.asar/node_modules/babylon/lib/index.js:3370:10)
    at Parser.pp$3.parseExprListItem (/Applications/CocosCreator.app/Contents/Resources/app.asar/node_modules/babylon/lib/index.js:4312:16)
    at Parser.pp$3.parseCallExpressionArguments (/Applications/CocosCreator.app/Contents/Resources/app.asar/node_modules/babylon/lib/index.js:3573:20)
    at Parser.pp$3.parseSubscripts (/Applications/CocosCreator.app/Contents/Resources/app.asar/node_modules/babylon/lib/index.js:3533:31)
    at Parser.pp$3.parseExprSubscripts (/Applications/CocosCreator.app/Contents/Resources/app.asar/node_modules/babylon/lib/index.js:3504:15)
    at Parser.pp$3.parseMaybeUnary (/Applications/CocosCreator.app/Contents/Resources/app.asar/node_modules/babylon/lib/index.js:3474:19)
    at Parser.pp$3.parseExprOps (/Applications/CocosCreator.app/Contents/Resources/app.asar/node_modules/babylon/lib/index.js:3404:19)
    at Parser.pp$3.parseMaybeConditional (/Applications/CocosCreator.app/Contents/Resources/app.asar/node_modules/babylon/lib/index.js:3381:19)
2019-10-06T18:04:22.881Z - normal: ScaleX != ScaleY. Don't know which one to return
2019-10-06T18:04:22.883Z - normal: ScaleX != ScaleY. Don't know which one to return
2019-10-06T18:04:22.886Z - normal: ScaleX != ScaleY. Don't know which one to return
